--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <properties>
 	<spring.version>4.2.0.RELEASE</spring.version>
 	<jstl.version>1.2</jstl.version>
+	<jackson.version>2.6.3</jackson.version>
   </properties>
   
   <dependencies>
@@ -46,6 +47,32 @@
 		<groupId>javax.servlet</groupId>
 		<artifactId>jstl</artifactId>
 		<version>${jstl.version}</version>
+	</dependency>
+	
+	<!-- Jackson 
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-jaxrs</artifactId>
+		<version>1.9.11</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-xc</artifactId>
+		<version>1.9.11</version>
+	</dependency>
+	-->
+	<!-- Need this for json to/from object -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>${jackson.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>${jackson.version}</version>
 	</dependency>
 	<!-- MySQL database driver -->
 	<dependency>
