--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
 		<version>5.1.9</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
+	<dependency>
+	    <groupId>org.apache.ant</groupId>
+	    <artifactId>ant</artifactId>
+	    <version>1.7.1</version>
+	</dependency>
+		
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
