--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-core</artifactId>
-		<version>${spring.version}</version>
+		<version>4.3.17.RELEASE</version>
 	</dependency>
 
 	<dependency>
@@ -73,6 +73,7 @@
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-databind</artifactId>
 		<version>${jackson.version}</version>
+		<!-- <version>2.8.11.1</version> -->
 	</dependency>
 	<!-- MySQL database driver -->
 	<dependency>
